--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ button:hover {
   background-color: #fff;
 }
 
+.profil_item:hover{
+  transform: scale(1.2);
+  box-shadow: 0px 15px 25px 0px rgb(151, 130, 105);
+}
+
 .profil_top {
   display: flex;
   align-items: center;
