--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   position: relative;
   z-index: 5;
   color: #000;
+  font-family: system-ui;
 }
 
 a {
@@ -26,10 +27,28 @@ button {
   padding: 15px 25px;
 }
 
-button:hover {
+.button {
+  cursor: default;
+  background-color: silver;
+  color: rgb(104, 102, 99);
+  border-radius: 8px;
+  border: none;
+  padding: 15px 25px;
+}
+
+.button:hover{
+  transform: none !important;
+  background-color: silver !important;
+  box-shadow: none !important;
+}
+
+.start:hover, .next:hover, .end:hover, .previous:hover {
+  transform: scale(1.2);
   background-color: rgb(28, 28, 71);
   box-shadow: 0px 0px 15px 0px rgb(32, 32, 129);
 }
+
+
 
 .container {
   width: 1044px;
@@ -81,12 +100,45 @@ button:hover {
 }
 
 .main_bottom {
+  margin-top: 30px;
+  margin-bottom: 15px;
     padding-right: 50px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
+.main_bottom p {
+  display: flex;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  background-color: silver;
+  line-height: 40px;
+  font-size: 20px;
+  color: rgb(61, 61, 98);
+  font-weight: 800;
+  cursor: pointer;
+}
+
+.main_bottom p:hover{
+  transform: scale(1.2);
+  box-shadow: 0px 0px 10px 0px black;
+}
+
+.actu_page{
+  width: 60px !important;
+  height: 60px !important;
+  background-color: rgb(92, 92, 184) !important;
+  color: beige !important;
+  line-height: 60px !important;
+  font-size: 25px !important;
+}
+
+
 .profil_block {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -102,9 +154,15 @@ button:hover {
   background-color: #fff;
 }
 
-.profil_item:hover{
+.profil_item:hover, .active{
   transform: scale(1.2);
   box-shadow: 0px 15px 25px 0px rgb(151, 130, 105);
+}
+
+.active{
+  background-color: rgb(242, 242, 213);
+  transform: scale(1.2);
+  box-shadow: 15px 15px 30px 0px rgb(151, 130, 105);
 }
 
 .profil_top {
